--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ section{
 }
 
 .hidden{
-/*     display: none !important; */
+    /* display: none !important; */
 }
 
 .main-content{
@@ -444,5 +444,55 @@ h3.my-profession{
     position: relative;
     padding-left: 37px;
     padding-bottom: 50px;
-    
+
+}
+
+.timeline-item:last-child{
+    padding-bottom: 0;
+}
+
+.timeline-item::before{
+    content: "";
+    width: 1px;
+    position: absolute;
+    height: 100%;
+    left: 7px;
+    top: 0;
+    bottom: 0;
+    background-color: red;
+}
+
+.circle-dot{
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 15px;
+    width: 15px;
+    border-radius: 50%;
+    background-color: red;
+}
+
+.timeline-date{
+    font-weight: 400;
+    font-size: 14px;
+    margin-bottom: 12px;
+    color: #292929;
+}
+
+.timeline-date i{
+    margin-right: 5px;
+    font-size: 20px;
+}
+
+.timeline-title{
+    font-weight: 700;
+    font-size: 18px;
+    text-transform: capitalize;
+}
+
+.timeline-text{
+    line-height: 25px;
+    font-size: 16px;
+    text-align: justify;
+    color: gray;
 }
